Cambio de comando de inicio

--- a/Server/package.json
+++ b/Server/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "jest",
-    "start": "nodemon ./src/index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
